# ambient-core

./: .editorconfig  .env.example  .gitattributes  .gitignore  .repomixignore  AGENTS.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  maestro_runs.db  pyproject.toml  repomix.config.json
.cursor/rules/: markdown-prose.mdc  readme-prose.mdc  session-branch-hygiene.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: cursor_sdk_heal.py  requirements-cursor-sdk.txt
.github/workflows/: ci-cursor-bridge.yml  ci.yml  hub-receiver.yml
catalog/: README.md  aliases.yaml  benchmarks.yaml  bridge_rules.yaml  crosswalk.yaml  data_options.yaml  industries.yaml  manifest.json  packs.yaml
catalog/core/: benchmarks.yaml  financial_sector_profiles.yaml  industries.yaml  transportation_sector_profiles.yaml
catalog/core/shared/: catalog_input_field_policy.yaml  common_data_options.yaml  core_ids.yaml  core_metrics.yaml  fpa_industry_ids.yaml
catalog/industries/: aviation.yaml  banking.yaml  commercial_finance.yaml  consumer_finance.yaml  financial_services.yaml  funds.yaml  healthcare.yaml  insurance.yaml  life_sciences.yaml  manufacturing.yaml  real_estate.yaml  restaurants.yaml  retail.yaml  transportation.yaml  trusts.yaml  vertical_farming.yaml
catalog/industries/aviation/: data_options.yaml  metrics.yaml  pack.yaml
catalog/industries/banking/: data_options.yaml  metrics.yaml  pack.yaml
catalog/industries/commercial_finance/: data_options.yaml  metrics.yaml  pack.yaml
catalog/runtime/: catalogEnrichment.js  catalogIndustries.js  catalogInputFieldPolicy.js  catalogManifest.js  catalogSectorProfiles.js  metricBridgeHints.js  referenceBenchmarks.js  referenceData.js  referenceMetrics.js
catalog/schema/: data-option-v1.json  manifest-v1.json  metric-v1.json  pack-v1.json
catalog/shared/: catalog_input_field_policy.yaml  data_options.yaml  fpa_metrics.yaml  metrics.yaml
config/: models.ollama-local.yaml  models.yaml
contracts/: README.md  finance-banking-v1.yaml  finance-commercial-finance-v1.yaml  finance-consumer-finance-v1.yaml  finance-funds-v1.yaml  finance-insurance-v1.yaml  finance-private-capital-ops-v1.yaml  finance-trusts-v1.yaml  healthcare-quality-outcomes-v1.yaml  life-sciences-rnd-v1.yaml  maestro-run-v1.yaml  operational-financial-bridge-v1.0.yaml  opportunity-v1.yaml  org-kpi-v1.1.yaml  quality-v1.1.yaml  tenant-metrics-v1.1.yaml  tenant-metrics-v1.yaml
contracts/schema/: contract-v1.json
docs/: AGENTS.md  ARCHITECTURE.md  CANONICAL_SCOPE.md  CONTRIBUTING.md  CONVENTIONS.md  CORE_VS_PLATFORM.md  ECOSYSTEM.md  INTEGRATING.md  POSITIONING.md  README.md  USAGE.md  agent-security.md  assurance-lifecycle.md  benchmarking-lifecycle.md  catalog-consumption.md  catalog-industry-coverage.md  catalog-input-field-gaps.md  covenant-lifecycle.md  crosswalk.md  governed-data.md  inference-layer.md  integrator-roadmap.md  investor-disclosure-lifecycle.md  maestro-catalog-ingestion.md  optimization-lifecycle.md  pipeline.md  planning-variance-lifecycle.md  work-cycles.md
docs/hub/: branching.md  data-product-contracts-intent.md  ecosystem-map-intent.md  ecosystem.md  spoke-broadcast.md  upstream-mapping.md
examples/agents/: README.md  minimal_worker.py
examples/pipeline/: README.md  minimal_governed_data.py
lib/ambient_agent/: __init__.py  agent_profiles.yaml  arg_validate.py  boundaries.py  config.py  executor.py  loop.py  maestro_client.py  registry.py  tool_definitions.yaml  tools.py  validate.py
lib/ambient_calc/: __init__.py  engine.py
lib/ambient_cli/: __init__.py  catalog.py
lib/ambient_contracts/: __init__.py  catalog_manifest.py  crosswalk.py  loader.py  manifest_models.py  paths.py  validate.py
lib/ambient_inference/: __init__.py  config_loader.py  contract_data.py  council.py  gateway.py  orchestrator.py  registry.py  router.py  schemas.py  store.py  telemetry.py  validate_registry.py
lib/ambient_pipeline/: __init__.py  bronze_catalog_map.py  bronze_upload_validation.py  catalog_field_rules.py  catalog_loader.py  catalog_manifest.py  contracts.py  gold_contract_map.py  governance_views.py  join_guards.py  perf.py  pii.py  provenance.py  validation.py
scripts/: audit_data_option_fields.py  check_catalog_hygiene.py  check_contract_schema.py  check_crosswalk.py  check_formulas.py  check_markdown_prose.py  check_metric_inputs.py  check_naming.py  check_phi.py  export_catalog_wiki.py  generate_reference_catalog.py  harden_catalog_data_options.py  migrate_catalog_layout_027.py  validate_contracts.py  validate_inference_registry.py
services/maestro/: deps.py  main.py  middleware.py
tests/: conftest.py  spark_fixtures.py  test_agent_e2e.py  test_ambient_agent.py  test_ambient_calc.py  test_ambient_contracts_catalog_manifest.py  test_catalog_input_coverage.py  test_council_router.py  test_crosswalk_loader.py  test_e2e_ollama.py  test_gold_contract_map.py  test_maestro_http_client.py  test_maestro_service.py  test_version_coherence.py  test_wheel_agent_import.py
tests/pipeline/: test_bronze_catalog_map.py  test_bronze_to_tenant_metrics_contract.py  test_catalog_manifest.py  test_catalog_sample_csv_bronze.py  test_contracts.py  test_join_guards.py  test_validation.py
(+78 files in other folders)
