[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-core"
version = "0.2.0"
description = "Open-source Ambient contracts, catalog, governance, inference (Maestro), and shared pipeline primitives"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
inference = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "sqlalchemy>=2.0,<3",
]
pipeline = [
    "pyspark>=3.5.0,<4",
]
postgres = ["psycopg[binary]>=3.2,<4"]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]
all = [
    "ambient-core[inference,pipeline,dev,postgres]",
]

[project.scripts]
validate-contracts = "ambient_contracts.validate:main"
validate-inference-registry = "ambient_inference.validate_registry:main"
ambient-catalog-generate = "ambient_cli.catalog:main"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.package-data]
ambient_inference = ["contracts/*.yaml", "default_config/*.yaml"]
ambient_contracts = ["bundled/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["lib"]
markers = [
    "gpu: live Maestro/Ollama E2E (set MAESTRO_E2E_URL)",
]
