[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-core"
dynamic = ["version"]
description = "Governed data-product contracts, reference catalog, and lakehouse governance (MIT)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
keywords = [
    "data-contracts",
    "data-catalog",
    "governance",
    "medallion",
    "lakehouse",
    "fp-a",
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/Ambient-Team/ambient-core"
Documentation = "https://github.com/Ambient-Team/ambient-core/blob/main/docs/README.md"
Repository = "https://github.com/Ambient-Team/ambient-core"
Issues = "https://github.com/Ambient-Team/ambient-core/issues"
Changelog = "https://github.com/Ambient-Team/ambient-core/releases"

[project.optional-dependencies]
pipeline = [
    "pyspark>=3.5.0,<5",
]
postgres = ["psycopg[binary]>=3.2,<4"]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.24,<2",
]
all = [
    "ambient-core[pipeline,dev,postgres]",
]

[project.scripts]
validate-contracts = "ambient_contracts.validate:main"
ambient-catalog-generate = "ambient_cli.catalog:main"

[tool.setuptools.dynamic]
version = { attr = "ambient_contracts.__version__" }

[tool.setuptools.packages.find]
where = ["lib"]
include = [
    "ambient_contracts*",
    "ambient_cli*",
    "ambient_calc*",
    "ambient_pipeline*",
]

[tool.setuptools.package-data]
ambient_contracts = ["bundled/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["lib"]
